/*
 * Copyright 2019 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.kotlin.boxed.oneof;

option java_package = "com.squareup.wire.protos.kotlin";

message BoxedOneOfs {
  oneof OneOf {
    string array = 1;
    string boolean = 2;
    string class = 3;
    string open = 4;
    string fun = 5;
    string val = 6;
    string private = 7;
    string return = 8;
    string result = 9;
    string public = 10;
  }
}
